# golf-clip

./: .dockerignore  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  PARALLEL_TASKS.md  PRD.md  README.md  package-lock.json  package.json  phase_2_plan.md  pyproject.toml  vercel.json
.github/: dependabot.yml
.github/workflows/: test.yml
apps/browser/: .env.example  .gitignore  .size-limit.json  eslint.config.js  index.html  lighthouserc.cjs  lighthouserc.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/: PAUSED.md  pyproject.toml
apps/desktop/backend/: main.py
apps/desktop/backend/api/: routes.py  schemas.py
apps/desktop/backend/core/: __init__.py  config.py  database.py
apps/desktop/backend/detection/: __init__.py  audio.py  flow_tracker.py  pipeline.py  scale_matcher.py  tracker.py  trajectory_assembler.py  trajectory_physics.py
apps/desktop/backend/models/: .gitkeep  job.py  trajectory.py
apps/desktop/backend/processing/: curves.py
apps/desktop/backend/tests/: FRONTEND_EDGE_CASES.md  test_animation_easing.py  test_audio_detection.py  test_batch_upload.py  test_bezier_trajectory.py  test_database.py  test_early_detection_integration.py  test_export_no_tracer.py  test_feedback.py  test_integration.py  test_kalman_tracker.py  test_landing_migration.py  test_ml_config.py  test_ml_stages.py  test_scale_matcher.py  test_tracer_analysis.py  test_tracer_feedback_api.py  test_tracer_feedback_db.py  test_track_with_landing.py  test_trajectory_assembler.py  test_trajectory_generate_sse.py  test_two_pass_encoding.py
apps/webapp/: .env.example  Dockerfile  PAUSED.md  cors-rules.json  fly.toml  pyproject.toml
apps/webapp/backend/: __init__.py  main.py
apps/webapp/backend/api/: __init__.py  routes.py
apps/webapp/backend/core/: __init__.py  config.py  database.py  storage.py
apps/webapp/backend/models/: __init__.py  job.py
backlog/tasks/: a11y-add-aria-labels-to-transport-controls.md  bug-export-choppy-low-fps.md  bug-frame-step-no-visible-video-change.md  bug-offline-export-timeout-handling.md  bug-transport-buttons-not-clickable.md  ci-add-github-actions-test-workflow.md  ci-add-pre-commit-hooks-husky-lint-staged.md  dx-fix-eslint-any-errors-clip-exporter-test.md  dx-rename-codec-detector-test-to-match-source.md  feature-add-draggable-tracer-control-points.md  feature-add-open-graph-meta-tags.md  feature-add-pwa-manifest-for-installability.md  feature-add-pwa-web-app-manifest.md  feature-add-tracer-color-picker.md  feature-add-web-share-api-for-exported-clips.md  feature-clip-export-filename-prefix.md  feature-touch-gesture-zoom-pan.md  feature-tracer-point-dragging.md  feature-tracer-shot-presets.md  grooming-configure-dependabot-automated-dependency-updates.md  grooming-mark-completed-backlog-items-done.md  grooming-merge-open-pr-chain-feb26.md  grooming-triage-open-pull-requests-feb25.md  grooming-update-ci-task-statuses-feb24.md  grooming-update-completed-task-statuses.md  grooming-update-stale-ci-dx-statuses-feb24.md  polish-add-favicon.md  polish-fix-grammar-1-shots-pluralization.md  refactor-add-bundle-size-ci-check.md  refactor-add-eslint-typescript-react-config.md  refactor-add-prettier-formatting-with-ci-check.md  refactor-clean-up-stale-git-branches.md  refactor-code-split-landing-page-react-lazy.md  refactor-decompose-clip-review-component.md  refactor-delete-merged-git-branches.md  refactor-replace-console-with-structured-logging.md  research-lighthouse-performance-audit.md  test-add-accessibility-checks-to-e2e-suite.md  test-add-axe-core-accessibility-e2e-spec.md  (+28 more)
docs/: API.md  ARCHITECTURE.md  FEATURES.md  PRODUCT-WALKTHROUGH.md  feedback-schema.md  multi-video-upload-scope.md  performance-test-results-2026-01-25.md  uat-hevc-browser-testing.md
scripts/: compare_performance.py  performance_test.py  setup-dev.sh  test_video_detection.py
tests/: __init__.py  conftest.py  test_audio.py  test_classifier.py  test_video.py  test_visual.py
(+300 files in other folders)
