[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "golfclip-webapp"
version = "0.1.0"
description = "GolfClip Cloud Webapp Backend"
requires-python = ">=3.11"
dependencies = [
    "golfclip-detection",
    "golfclip-schemas",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "moto>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
